# ml_pipeline

./: .dockerignore  .gitignore  Dockerfile  client.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
assets/data/processed/: .gitignore
assets/results/: .gitignore
src/: config_reader.py  evaluate.py  inference_api.py  prepare.py  request_validator.py  train.py
