[tool.poetry]
name = "ml-best-practices"
version = "0.1.0"
description = "Applying MLOps Best Practices to create efficient ML Pipeline"
authors = ["Ezzaldin97 <kingtal632@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_best_practices"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
dvc = "^3.33.0"
dvc-s3 = "^3.2.0"
python-dotenv = "^1.0.1"
dagshub = "^0.3.30"
mlflow = "^2.13.0"
scikit-learn = "^1.3.0"
hyperopt = "^0.2.5"
litserve = "^0.2.2"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
